appId: com.sample.browserstack.samplecalculator
env:
  PERCY_SERVER: "http://percy.cli:5338"
  PERCY_DEVICE_NAME: "Samsung Galaxy S22"
  PERCY_OS_VERSION: "13"
  PERCY_SCREEN_WIDTH: "1080"
  PERCY_SCREEN_HEIGHT: "2340"
  PERCY_ORIENTATION: "portrait"
---
# Initialize Percy
- runFlow: percy/flows/percy-init.yaml

# Test 1: Single digit input
- tapOn: "1"
- runFlow:
    file: percy/flows/percy-screenshot.yaml
    env:
      SCREENSHOT_NAME: "Single digit"

# Test 2: Double digit input
- tapOn: "1"
- tapOn: "2"
- runFlow:
    file: percy/flows/percy-screenshot.yaml
    env:
      SCREENSHOT_NAME: "Double digit"
